--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div id="img1">
     <img src="img/bc.jpeg" alt="hermoso border collie">
     <a href="img/bc.jpeg">mostrar imagen en grande</a>
-    <h3>Hermoso borde collie</h3>
+    <h3>Hermoso bordre collie</h3>
 </div>
 
 
